# codicil

./: .gitignore  .gitkeep  BRIEF_CORRECTIONS.md  BRIEF_FOR_LLMS.md  BRIEF_REFERENCE.md  CODE_OF_CONDUCT.md  CODICIL_API_REFERENCE.md  CODICIL_EXAMPLES.md  CODICIL_IMPLEMENTATION_GUIDE.md  CODICIL_README.md  CONTRIBUTING.md  Cargo.toml  FFI_UNIFICATION_PLAN.md  FOLDER_ROUTING_PLAN.md  INDEX.md  LLM_STRUGGLES.md  PHASE1_LANDING_PAGE_INTEGRATION.md  PROCESS.md  README.md
.github/workflows/: rust.yml
codicil-cli/: Cargo.toml
codicil-cli/assets/: GET.hints.bv  codicil.toml  globals.css  index.bv  landing.rbv
codicil-cli/src/: main.rs  tests.rs
codicil-core/: Cargo.toml
codicil-core/src/: compiler.rs  context.rs  ffi.rs  handler.rs  lib.rs  middleware.rs  route_file.rs  router.rs  watcher.rs
codicil-ffi/: Cargo.toml
codicil-ffi/bindings/: codicil.toml
codicil-ffi/src/: lib.rs
docs/: IMPORTING-LIBRARIES.md  README.md
docs/guides/: contracts.md  ffi.md  getting-started.md  middleware.md  routing.md
landing-page/: CORRECTIONS.md  index.bv  test.bv  test_txn.bv
landing-page/components/: landing.rbv
landing-page/routes/: GET.hints.bv
landing-page/styles/: globals.css
test-app/: .env.example  codicil.toml
test-app/components/: button.rbv
test-app/lib/: user.bv
test-app/routes/: GET.index.bv  GET.users.bv
