[package]
name = "codicil-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "codi"
path = "src/main.rs"

[dependencies]
codicil-core = { path = "../codicil-core" }
clap = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }
