[package]
name = "codicil-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "codi"
path = "src/main.rs"

[dependencies]
codicil-core = { path = "../codicil-core" }
clap = { workspace = true }
tokio = { version = "1", features = ["full"] }
axum = { workspace = true }
tower-http = { version = "0.5", features = ["fs"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }
http-body = "1"
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
